tests/files/type_checker_tests/should_fail/021.cmdr
//Should fail on minus set when left side is not a variable
5 -= 3;